# ppose

./: pyproject.toml
app/: db.sqlite3
app/app/: settings.py  urls.py
app/testcv2/: apps.py  urls.py  views.py
app/testcv2/algos/: pose.py
app/testcv2/static/css/: video_page.css
app/testcv2/templates/testcv2/: base.html  double_video_page.html  header.html  index.html  single_video_page.html  video_page.html
app/tests/: cam.py
