[tool.poetry]
name = "ppose-django"
version = "0.1.0"
description = ""
authors = ["desonglll <lindesong666@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
opencv-python = "^4.10.0.84"
mediapipe = "^0.10.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
